crates/nash-can/src/snapshots/nash_can__module__tests__labeled_ctor_extra_field_error.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\ntype packet = Packet { z : unit }\nmain = Packet { z = (), a = () }\n"
info: diagnostic
---
nash::names::labeled_ctor_extra_field

  × The `Packet` constructor has no `a` field:
   ╭─[src/Main.nash:3:25]
 2 │ type packet = Packet { z : unit }
 3 │ main = Packet { z = (), a = () }
   ·                         ─
   ╰────
  help: Remove this extra field or check its spelling against the constructor
        declaration.
