crates/nash-can/src/snapshots/nash_can__module__tests__labeled_ctor_pattern_unknown_field_error.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\ntype packet = Packet { z : unit }\nget (Packet { a }) = a\n"
info: diagnostic
---
nash::names::labeled_ctor_unknown_field

  × The `Packet` constructor has no `a` field:
   ╭─[src/Main.nash:3:15]
 2 │ type packet = Packet { z : unit }
 3 │ get (Packet { a }) = a
   ·               ─
   ╰────
  help: Check the field name against the constructor declaration.
