crates/nash-can/src/snapshots/nash_can__module__tests__labeled_ctor_twins_require_equal_label_order.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\ntype Box = Box { z : Int, a : Int }\ntype box = Box { a : int, z : int }\n"
---
[
    DuplicateCtor {
        name: "Box",
        first: Region {
            start: Position {
                line: 2,
                column: 12,
            },
            end: Position {
                line: 2,
                column: 15,
            },
        },
        second: Region {
            start: Position {
                line: 3,
                column: 12,
            },
            end: Position {
                line: 3,
                column: 15,
            },
        },
    },
]
